[gd_scene load_steps=12 format=3 uid="uid://dw75amn1ar7p6"]

[ext_resource type="Script" path="res://UI/SummonPanel.gd" id="1_bqov4"]
[ext_resource type="Texture2D" uid="uid://c50ovpjjirqem" path="res://assets/sparkles.svg" id="2_r4gb1"]
[ext_resource type="Texture2D" uid="uid://u60tabu8cyd4" path="res://assets/info.svg" id="3_uxwyj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kianx"]
bg_color = Color(0.364706, 0.364706, 0.364706, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.223529, 0.223529, 0.223529, 1)
border_blend = true

[sub_resource type="Animation" id="Animation_7k3pj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/StarsLabel:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/SummonTextLabel:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_akw0i"]
resource_name = "five_star"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/StarsLabel:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_0650d"]
resource_name = "four_star"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/StarsLabel:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_ivhd3"]
resource_name = "show_summon_text"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/SummonTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_juxsn"]
resource_name = "three_star"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/StarsLabel:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i6ubv"]
_data = {
"RESET": SubResource("Animation_7k3pj"),
"five_star": SubResource("Animation_akw0i"),
"four_star": SubResource("Animation_0650d"),
"show_summon_text": SubResource("Animation_ivhd3"),
"three_star": SubResource("Animation_juxsn")
}

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_igegx"]
size = Vector2(192, 192)

[node name="Summon" type="VSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1014.0
offset_bottom = -489.0
grow_horizontal = 2
grow_vertical = 2
collapsed = true
dragger_visibility = 2
script = ExtResource("1_bqov4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Sprite" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_r4gb1")
expand_mode = 5
stretch_mode = 5

[node name="Label" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
bbcode_enabled = true
text = "[p align=center]Call forth from the stars great adventurers from other realms...

Who will you become friends with next?
"
fit_content_height = true
scroll_active = false

[node name="Buttons" type="HSplitContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0
collapsed = true
dragger_visibility = 1

[node name="SummonButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Summon an Ally!"

[node name="InfoButton" type="TextureButton" parent="Buttons"]
custom_minimum_size = Vector2(31, 31)
layout_mode = 2
size_flags_vertical = 8
texture_normal = ExtResource("3_uxwyj")
texture_pressed = ExtResource("3_uxwyj")
ignore_texture_size = true
stretch_mode = 4

[node name="InfoPopup" type="PopupPanel" parent="."]
initial_position = 1
title = "Pull Rates"
size = Vector2i(400, 200)
current_screen = -2
borderless = false

[node name="PullRatesLabel" type="RichTextLabel" parent="InfoPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 396.0
offset_bottom = 196.0
bbcode_enabled = true
text = "
	5 	☆		- 	5.00%
	4 	☆		- 	15.0%
	3	☆		- 	80.0%


Disclaimer: this isn't gambling since you can't spend money on this game, right?"

[node name="SummonDialogPopup" type="PopupPanel" parent="."]
title = "Summon?"
size = Vector2i(250, 125)
theme_override_styles/panel = SubResource("StyleBoxFlat_kianx")

[node name="Body" type="VBoxContainer" parent="SummonDialogPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 246.0
offset_bottom = 121.0

[node name="Label" type="Label" parent="SummonDialogPopup/Body"]
layout_mode = 2
size_flags_vertical = 3
text = "Do you want to summon?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HSplitContainer" parent="SummonDialogPopup/Body"]
layout_mode = 2
size_flags_vertical = 8

[node name="ConfirmSummonButton" type="Button" parent="SummonDialogPopup/Body/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Yes, Summon"

[node name="CancelSummonButton" type="Button" parent="SummonDialogPopup/Body/Buttons"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Cancel"

[node name="SummonPopup" type="PopupPanel" parent="."]
size = Vector2i(500, 400)
always_on_top = true
transparent = true
theme_override_styles/panel = SubResource("StyleBoxFlat_kianx")

[node name="Timer" type="Timer" parent="SummonPopup"]
wait_time = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="SummonPopup"]
libraries = {
"": SubResource("AnimationLibrary_i6ubv")
}

[node name="Container" type="VBoxContainer" parent="SummonPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 396.0
alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="SummonPopup/Container"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
bbcode_enabled = true
text = "[p align=center]You call upon..."

[node name="StarsLabel" type="Label" parent="SummonPopup/Container"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "*****"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="SummonArt" type="TextureRect" parent="SummonPopup/Container"]
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_igegx")
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="SummonPopup/Container"]
layout_mode = 2

[node name="NameLabel" type="RichTextLabel" parent="SummonPopup/Container"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
bbcode_enabled = true
text = "[p align=center]name!"

[node name="SummonTextLabel" type="Label" parent="SummonPopup/Container"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "quip."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CloseButton" type="Button" parent="SummonPopup/Container"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="Buttons/SummonButton" to="." method="_on_summon_button_pressed"]
[connection signal="pressed" from="Buttons/InfoButton" to="." method="_on_info_button_pressed"]
[connection signal="pressed" from="SummonDialogPopup/Body/Buttons/ConfirmSummonButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="SummonDialogPopup/Body/Buttons/CancelSummonButton" to="." method="_on_cancel_button_pressed"]
[connection signal="popup_hide" from="SummonPopup" to="." method="_on_summon_popup_popup_hide"]
[connection signal="pressed" from="SummonPopup/Container/CloseButton" to="." method="_on_close_button_pressed"]
